feat: added keyboard map tabbing skip link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    <a href='#neighborhoods-select' class='skip-link'>skip to filter options</a>
     <nav>
       <h1>
         <a href="/">Restaurant Reviews</a>
