--- a/restaurant.html
+++ b/restaurant.html
@@ -26,6 +26,8 @@
          </ul>
          <!-- End breadcrumb -->
          <!-- End nav -->
+         <a href='#restaurant-container' class='skip-link'>skip to restaurant details</a>
+
       </header>
       <!-- End header -->
       <!-- Beginning main -->
